// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo render snapshots 📸 Logo default should match snap shot 1`] = `
<img
  alt="Logo"
  src="https://via.placeholder.com/30x30.png?text=30x30+Logo"
/>
`;

exports[`Logo render snapshots 📸 Logo size large should match snap shot 1`] = `
<img
  alt="Logo"
  src="https://via.placeholder.com/30x30.png?text=30x30+Logo"
/>
`;

exports[`Logo render snapshots 📸 Logo size medium should match snap shot 1`] = `
<img
  alt="Logo"
  src="https://via.placeholder.com/60x60.png?text=60x60+Logo"
/>
`;

exports[`Logo render snapshots 📸 Logo size undefined option should match snap shot 1`] = `
<img
  alt="Logo"
  src="https://via.placeholder.com/30x30.png?text=30x30+Logo"
/>
`;
